<resources>
    <string name="app_name">UdemyProjectSection5Swoosh</string>
    <string name="background_image">background image.</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="go_all_in">Go All In</string>
    <string name="on_going_all_out">On Going All Out</string>
    <string name="find_a_team_in_you_city_and_dominate_the_league">Find a team in your city and dominate the league!</string>
    <string name="next">Next</string>
    <string name="desired_league">Desired League:</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="co_ed">CO-ED</string>
    <string name="get_started">Get started</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">beginner</string>
    <string name="baller">baller</string>
    <string name="finish">Finish</string>
</resources>